--- a/package.json
+++ b/package.json
@@ -1,25 +1,8 @@
 {
   "name": "ninjapear",
-  "version": "1.0.0",
-  "description": "JavaScript client for the NinjaPear API - B2B data platform for customer discovery, company logos, and email validation.",
+  "version": "1.1.0",
+  "description": "JavaScript client for the NinjaPear API - B2B data platform for customer discovery",
   "license": "MIT",
-  "author": {
-    "name": "NinjaPear",
-    "email": "hello@nubela.co"
-  },
-  "homepage": "https://nubela.co",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/nubelaco/ninjapear-js.git"
-  },
-  "keywords": [
-    "ninjapear",
-    "api",
-    "b2b",
-    "customer-discovery",
-    "company-logo",
-    "email-validation"
-  ],
   "main": "dist/index.js",
   "scripts": {
     "build": "babel src -d dist",
